--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         your posture and make you more comfortable while at work, helping you stay focused on the task at hand.</p>
       <p>Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer 
         to allow notepads, pens, and USB sticks to be stored under the stand.</p>
-        <ul id="options">
+        <ul class="options">
           <li class="card">
             <div>
               <h3>Bamboo Stand</h3>
@@ -106,6 +106,112 @@
         </ul>
     </section>
   </main>
+  <div class="modal card">
+    <h2>Back this project</h2>
+    <p>Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</p>
+    <ul class="options">
+      <li class="card">
+        <div class="wrapper">
+          <input type="radio" name="option" class="toggler">
+          <div class="radio-container">
+            <div class="radio-button"></div>
+          </div>
+          <div class="content">
+            <div>
+              <h3>Pledge with no reward</h3>
+            </div>
+            <p>Choose to support us without a reward if you simply believe in our project. As a backer, 
+              you will be signed up to receive product updates via email.</p>
+          </div>
+        </div>
+        <div class="accordion">
+          <p>Enter your pledge</p>
+          <div class="pledge">
+            <p>&dollar;</p>
+            <input type="number" placeholder="0">
+          </div>
+          <div class="btn btn-small">Continue</div>
+        </div>
+      </li>
+      <li class="card">
+        <div class="wrapper">
+          <input type="radio" name="option" class="toggler">
+          <div class="radio-container">
+            <div class="radio-button"></div>
+          </div>
+          <div class="content">
+            <div>
+              <h3>Bamboo Stand</h3>
+              <h4>Pledge &dollar;25 or more</h4>
+              <h1>101<span>left</span></h1>
+            </div>
+            <p>You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and 
+              you’ll be added to a special Backer member list.</p>
+          </div>
+        </div>
+        <div class="accordion">
+          <p>Enter your pledge</p>
+          <div class="pledge">
+            <p>&dollar;</p>
+            <input type="number" placeholder="25">
+          </div>
+          <div class="btn btn-small">Continue</div>
+        </div>
+      </li>
+      <li class="card">
+        <div class="wrapper">
+          <input type="radio" name="option" class="toggler">
+          <div class="radio-container">
+            <div class="radio-button"></div>
+          </div>
+          <div class="content">
+            <div>
+              <h3>Black Edition Stand</h3>
+              <h4>Pledge &dollar;75 or more</h4>
+              <h1>64<span>left</span></h1>
+            </div>
+            <p>You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer 
+              member list. Shipping is included.</p>
+          </div>
+        </div>
+        <div class="accordion">
+          <p>Enter your pledge</p>
+          <div class="pledge">
+            <p>&dollar;</p>
+            <input type="number" placeholder="75">
+          </div>
+          <div class="btn btn-small">Continue</div>
+        </div>
+      </li>
+      <li class="card">
+        <div class="wrapper">
+          <input type="radio" name="option" class="toggler">
+          <div class="radio-container">
+            <div class="radio-button"></div>
+          </div>
+          <div class="content">
+            <div>
+              <h3>Mahogany Special Edition</h3>
+              <h4>Pledge &dollar;200 or more</h4>
+              <h1>0<span>left</span></h1>
+            </div>
+            <p>You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
+              to our Backer member list. Shipping is included.</p>
+          </div>
+        </div>
+        <div class="accordion">
+          <p>Enter your pledge</p>
+          <div class="pledge">
+            <p>&dollar;</p>
+            <input type="number" placeholder="200">
+          </div>
+          <div class="btn btn-small">Continue</div>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <div class="overlay"></div>
+  
   <!-- About
   Discover
   Get Started
