--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
     <nav>
       <img src="images/logo.svg" alt="" id="logo">
       <ul id="navbar">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Discover</a></li>
-        <li><a href="#">Get Started</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#progress">Discover</a></li>
+        <li><a href="#get-started">Get Started</a></li>
       </ul>
+      <div id="hamburger-icon">
+        
+      </div>
     </nav>
   </header>
 
@@ -39,9 +42,10 @@
       <div>
         <div class="btn btn-big" id="back-project-btn">Back this project</div>
         <div id="bookmark-container">
-          <div id="bookmark-icon"></div>
           <p>Bookmark</p>
+          <div id="bookmark-icon"></div>
         </div>
+        <div id="bookmark-icon-mobile"></div>
       </div>
     </section>
     <section id="progress" class="card">
@@ -150,8 +154,8 @@
             <div>
               <h3>Bamboo Stand</h3>
               <h4>Pledge &dollar;25 or more</h4>
-              <h1>101<span>left</span></h1>
             </div>
+            <h1>101<span>left</span></h1>
             <p>You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and 
               you’ll be added to a special Backer member list.</p>
           </div>
@@ -175,8 +179,8 @@
             <div>
               <h3>Black Edition Stand</h3>
               <h4>Pledge &dollar;75 or more</h4>
-              <h1>64<span>left</span></h1>
             </div>
+            <h1>64<span>left</span></h1>
             <p>You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer 
               member list. Shipping is included.</p>
           </div>
@@ -200,8 +204,8 @@
             <div>
               <h3>Mahogany Special Edition</h3>
               <h4>Pledge &dollar;200 or more</h4>
-              <h1>0<span>left</span></h1>
             </div>
+            <h1>0<span>left</span></h1>
             <p>You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
               to our Backer member list. Shipping is included.</p>
           </div>
