--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <section>
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="https://github.com/gauranajose">Jose Gaurana</a>.
+        Coded by <a href="https://github.com/gauranajose" target="_blank">Jose Gaurana</a>.
       </p>
     </section>
   </main>
